# scootlens

./: .gitignore  .gitleaksignore  AGENTS.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: release-footer.md
.github/workflows/: ci.yml  release.yml
console/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
console/e2e/: console.spec.ts  global-setup.ts  global-teardown.ts
console/src/: App.svelte  app.css  main.ts
console/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  autoapprove.test.ts  autoapprove.ts  connect.test.ts  connect.ts  cookies.test.ts  cookies.ts  credentials.test.ts  credentials.ts  errors.test.ts  errors.ts  events.test.ts  events.ts  format.test.ts  format.ts  journal.test.ts  journal.ts  keys.test.ts  keys.ts  procs.test.ts  procs.ts  profiles.test.ts  profiles.ts  replay.test.ts  replay.ts  rpc.test.ts  rpc.ts  session.test.ts  session.ts
console/src/pages/: Approvals.svelte  Dashboard.svelte  Inspector.svelte  Journal.svelte  Replay.svelte  Session.svelte  Settings.svelte
crates/scootctl/: Cargo.toml
crates/scootctl/src/: main.rs
crates/scootlens-abi/: Cargo.toml
crates/scootlens-abi/src/: cap.rs  error.rs  id.rs  lib.rs  method.rs  net.rs  quota.rs  replay.rs  rpc.rs  scope.rs  wf.rs
crates/scootlens-abi/tests/: contract.rs
crates/scootlens-abi/tests/snapshots/: contract__abi_error_ref_stale.snap  contract__error_code_table.snap  contract__method_table.snap  contract__net_rule_set.snap  contract__quota_spec.snap  contract__replay_bundle.snap  contract__rpc_notification_lifecycle.snap  contract__rpc_request_act_click.snap  contract__rpc_response_failure.snap  contract__rpc_response_success.snap  contract__token_claims.snap  contract__wf_spec.snap
crates/scootlens-driver-chromium/: Cargo.toml
crates/scootlens-driver-chromium/src/: cdp.rs  handle.rs  lib.rs  process.rs  snapshot.rs
crates/scootlens-driver-chromium/tests/: conformance.rs
crates/scootlens-driver-mock/: Cargo.toml
crates/scootlens-driver-mock/src/: lib.rs  model.rs
crates/scootlens-driver-mock/tests/: mock_driver.rs
crates/scootlens-driver-mock/tests/snapshots/: mock_driver__login_compact_text.snap
crates/scootlens-gateway/: Cargo.toml
crates/scootlens-gateway/src/: auth.rs  conn.rs  lib.rs
crates/scootlens-gateway/tests/: auth.rs  ws.rs
crates/scootlens-hal/: Cargo.toml
crates/scootlens-hal/src/: conformance.rs  driver.rs  lib.rs  types.rs
crates/scootlens-kernel/: Cargo.toml
crates/scootlens-kernel/src/: bus.rs  dispatch.rs  frames.rs  journal.rs  lib.rs  netstack.rs  proc.rs  redact.rs  security.rs  takeover.rs  vfs.rs  wf.rs
crates/scootlens-kernel/tests/: dispatch.rs  dispatch_p2.rs  dispatch_p3.rs  dispatch_p4.rs  enforcement.rs  kernel.rs  redteam.rs
crates/scootlens-mcp/: Cargo.toml
crates/scootlens-mcp/src/: abi_client.rs  lib.rs  main.rs  projection.rs  server.rs
crates/scootlens-mcp/tests/: link_health.rs  mcp_e2e.rs
crates/scootlens-net/: Cargo.toml
crates/scootlens-net/src/: lib.rs
crates/scootlens-test-support/: Cargo.toml
crates/scootlens-test-support/src/: lib.rs
crates/scootlensd/: Cargo.toml
crates/scootlensd/src/: embedded_console.rs  main.rs
crates/scootlensd/tests/: e2e.rs
docs/: 01-vision.md  02-architecture.md  03-abi-spec.md  04-kernel-design.md  05-engine-hal.md  06-security-model.md  07-web-console.md  08-engineering.md  09-roadmap.md  README.md
docs/adr/: 0001-rust-core.md  0002-cdp-external-process.md  0003-hal-webdriver-bidi.md  0004-pure-web-console.md  0005-agent-interface-mcp.md  0006-tdd-mock-driver.md  0007-token-wire-format.md  0008-p3-os-semantics-abi.md  0009-p4-takeover-replay-mcp.md  0010-takeover-point-click.md  0011-profile-state-inspect-delete.md  README.md  template.md
fixtures/site/: index.html  login.html  welcome.html  widgets.html
skills/scootlens/: SKILL.md
