[workspace]
resolver = "3"
members = [
    "crates/scootlens-abi",
    "crates/scootlens-hal",
    "crates/scootlens-kernel",
    "crates/scootlens-driver-mock",
    "crates/scootlens-driver-chromium",
    "crates/scootlens-net",
    "crates/scootlens-gateway",
    "crates/scootlens-mcp",
    "crates/scootlensd",
    "crates/scootctl",
    "crates/scootlens-test-support",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/scootship/scootlens"
publish = false

[workspace.dependencies]
# 内部 crate（依赖规则见 docs/02-architecture.md）
scootlens-abi = { path = "crates/scootlens-abi" }
scootlens-hal = { path = "crates/scootlens-hal" }
scootlens-kernel = { path = "crates/scootlens-kernel" }
scootlens-driver-mock = { path = "crates/scootlens-driver-mock" }
scootlens-driver-chromium = { path = "crates/scootlens-driver-chromium" }
scootlens-net = { path = "crates/scootlens-net" }
scootlens-gateway = { path = "crates/scootlens-gateway" }
scootlens-mcp = { path = "crates/scootlens-mcp" }
scootlens-test-support = { path = "crates/scootlens-test-support" }

# 三方依赖统一版本
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "fs", "io-util", "process"] }
async-trait = "0.1"
url = { version = "2", features = ["serde"] }
tracing = "0.1"
base64 = "0.22"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
rand = "0.9"
tempfile = "3"
tokio-tungstenite = "0.26"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
chacha20poly1305 = "0.10"
hex = "0.4"
tower-http = { version = "0.6", features = ["fs"] }
include_dir = "0.7"
mime_guess = "2"
rmcp = { version = "2.1", default-features = false, features = ["server", "transport-io"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# 测试
insta = { version = "1", features = ["json"] }
tokio-test = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
