[package]
name = "scootlens-driver-mock"
description = "Mock 引擎驱动：可编程内存页面模型 + 故障注入（TDD 基石，ADR-0006）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
scootlens-abi.workspace = true
scootlens-hal.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
insta.workspace = true
