[package]
name = "scootlens-gateway"
description = "Gateway：WS/HTTP JSON-RPC 分发 + 静态 Console 托管（P1 起实现）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
scootlens-abi.workspace = true
scootlens-hal.workspace = true
scootlens-kernel.workspace = true
axum.workspace = true
futures-util.workspace = true
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
scootlens-driver-mock.workspace = true
tokio-tungstenite.workspace = true
