[package]
name = "scootlens-hal"
description = "ScootLens 引擎 HAL：EngineDriver/EngineHandle trait、能力矩阵、一致性测试套件"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
scootlens-abi.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
insta.workspace = true
