[package]
name = "scootlens-mcp"
description = "MCP server：ABI 投影层，零业务逻辑（P4 实现，见 ADR-0005）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
scootlens-abi.workspace = true
scootlens-kernel.workspace = true
