[package]
name = "scootlens-mcp"
description = "MCP server：ABI 投影层，零业务逻辑（ADR-0005/ADR-0009）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "scootlens-mcp"
path = "src/main.rs"

[dependencies]
scootlens-abi.workspace = true
rmcp.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
scootlens-kernel.workspace = true
scootlens-driver-mock.workspace = true
scootlens-gateway.workspace = true
