[package]
name = "scootlens-net"
description = "网络规则引擎与请求日志（P2 起实现）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
scootlens-abi.workspace = true
