[package]
name = "scootlensd"
description = "ScootLens 守护进程"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
scootlens-gateway.workspace = true
scootlens-kernel.workspace = true
scootlens-driver-mock.workspace = true
scootlens-abi.workspace = true
