[package]
name = "scootlensd"
description = "ScootLens 守护进程"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
scootlens-gateway.workspace = true
scootlens-kernel.workspace = true
scootlens-driver-mock.workspace = true
scootlens-driver-chromium.workspace = true
scootlens-abi.workspace = true
scootlens-hal.workspace = true
clap.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
scootlens-test-support.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
